update openapi, add stub interface
