# directory/app/views.py
@@ -1,17 +1,19 @@
-from django.shortcuts import render
+import json
+import operator
+from functools import reduce
+from django.db import IntegrityError
+from django.db.models import Q
 from django.http import HttpResponse
 from django.http import JsonResponse
-from functools import reduce
-from django.db.models import Q
-import operator
 from django.core import serializers
-from app.models import MedFacility, MedFacilitySerializer
 from django.core.exceptions import FieldDoesNotExist
+from django.contrib.gis.geos import GEOSGeometry
+from django.contrib.gis.measure import D 
 from django.views.decorators.csrf import csrf_exempt
+from django.shortcuts import render
+from app.models import MedFacility, MedFacilitySerializer
 from rest_framework import status
 from rest_framework.response import Response
-from django.db import IntegrityError
-import json
 
 @csrf_exempt 
 def addMed(request):
@@ -28,23 +30,66 @@ def addMed(request):
         except IntegrityError as e:
             return HttpResponse("Medical Facility already exists",status=status.HTTP_409_CONFLICT)
 
-
-
 @csrf_exempt 
 def getMed(request):
     if request.method == "GET":
         try:
             response = []
             request = json.loads(request.body)
-            queryset = MedFacility.objects.filter(tokens__contains=request.get('tokens'))
+            query_str = request.get('query')
+            tkn = query_str.split()
+            dist = request.get('distance')
+            lat = request.get('location').get('lat')
+            lon = request.get('location').get('lon')
+            pnt = GEOSGeometry('POINT({0} {1})'.format(str(lat), str(lon)), srid=4326)   
+            
+            for t in tkn:
+                qs = MedFacility.objects.filter(tokens__icontains=t,coords__distance_lte=(pnt, D(km=dist)))
+            
+                for s in qs:
+                    mf_data = MedFacilitySerializer(s).data
+                    dic = { 'name' : mf_data.get('properties').get('name'),
+                            'location' : {"lat" : mf_data.get('geometry').get('coordinates')[0],
+                                               "lon" : mf_data.get('geometry').get('coordinates')[1] }}
+                    if dic not in response:
+                        response.append(dic)
 
-            for s in queryset:
-                mf_data = MedFacilitySerializer(s).data
 
-                response.append({
-                    'name' : mf_data.get('properties').get('name'),
-                    'coordinates' : mf_data.get('geometry').get('coordinates')
-                })
+
+            return JsonResponse(response, safe=False, status=status.HTTP_200_OK)
+        except IntegrityError as e:
+            return HttpResponse("Error",status=status.HTTP_409_CONFLICT)
+
+
+@csrf_exempt 
+def stubMed(request):
+
+    if request.method == "GET":
+        try:
+            response = []
+            query_str = ''
+            request = json.loads(request.body)
+            query_str = request.get('query')
+            tkn = query_str.split()
+            dist = request.get('distance')
+            lat = request.get('location').get('lat')
+            lon = request.get('location').get('lon')
+
+            response.append({
+                'name' : 'Farmácia Lucas',
+                'location' : { "lat" : 40.6,
+                                 "lon" : -8.6 }
+            })
+            response.append({
+                'name' : 'Clínica Lopes',
+                'location' : { "lat" : 40.7,
+                                 "lon" : -8.7 }
+            })
+            response.append({
+                'name' : 'Ortopedista Esticadinho',
+                'location' : { "lat" : 60.6,
+                                 "lon" : -60.6 }
+            })
 
             return JsonResponse(response, safe=False, status=status.HTTP_200_OK)
         except IntegrityError as e:
